Font size 16px to avoid zoom on iPhone

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,10 @@
-body { padding: 0; margin: 0; font-family: Helvetica, Arial, sans-serif; background-color: #3c7b9b; font-size: 15px; }
+body { padding: 0; margin: 0; font-family: Helvetica, Arial, sans-serif; background-color: #3c7b9b; font-size: 16px; }
 h3 { margin: 0; text-align: center; }
 * { box-sizing: border-box; }
 p { word-wrap: break-word; }
 .container { position: absolute; top: 3%; bottom: 3%; left: 3%; right: 3%; }
 label { display: block; width: 150px; margin: 10px 0 5px; }
-input { display: inline-block; font-size: 1em; }
+input { display: inline-block; font-size: inherit; }
 .input-text { position: absolute; top: 0; left: 0; right: 0; width: 100%; height: 100%; padding: 10px; border: none; border-radius: 4px; }
 input#submit { -webkit-appearance: none; position: absolute; top: 0; right: 0; width: 50px; height: 100%; text-align: center; font-weight: bold; border-radius: 0 3px 3px 0; border: none; font-size: 1.5em; color: white; background-color: lightgreen; }
 .form-wrapper { position: absolute; bottom: 55px; left: 0; right: 0; height: 40px; border: #bfbfbf 1px solid; border-radius: 4px; text-align: center; }
